--- a/.github/workflows/recurring_issues.yml
+++ b/.github/workflows/recurring_issues.yml
@@ -11,7 +11,7 @@ jobs:
       issues: write
     steps:
       - name: Create Monthly Maintenance Audit Issue
-        uses: imjohnbo/issue-bot@3daae12aa54d38685d7ff8459fc8a2aee8cea98b
+        uses: imjohnbo/issue-bot@v3
         with:
           labels: 'maintenance, backend, audit'
           title: 'Maintenance & Dependancy Update'
