--- a/.github/workflows/recurring_issues.yml
+++ b/.github/workflows/recurring_issues.yml
@@ -1,7 +1,7 @@
 name: Monthly Maintenance Audit
 on:
   schedule:
-    - cron: '15 * * * *'
+    - cron: '45 14 * * *'
     
 jobs:
   create_issue: 
@@ -27,3 +27,13 @@ jobs:
           close-previous: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  add_issues:
+    needs: create_issue
+    runs-on: ubuntu-latest
+    steps:
+      -   name: Assign to One Project
+          uses: srggrs/assign-one-project-github-action@1.2.1
+          if: github.event.action == 'opened'
+          with:
+            project: https://github.com/users/TheFlyer1983/projects/1
+            column_name: 'Backlog'
